re PR c++/29226 (ICE in make_decl_rtl, at varasm.c:886)

PR c++/29226
	* typeck.c (cxx_sizeof_or_alignof_type): Tidy.  In templates, do
	not try to actually evaluate sizeof for a VLA type.
	PR c++/29226
	* g++.dg/template/vla1.C: New test.

From-SVN: r117375